SalesforceFiles/retrieveOutput/objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>EventName__c</fullName>
        <label>EventName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventTime__c</fullName>
        <label>EventTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EventUUID__c</fullName>
        <label>EventUUID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <label>Session</label>
        <referenceTo>Session__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>WallTimeSeconds__c</fullName>
        <label>WallTimeSeconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>EventName__c</columns>
        <columns>EventUUID__c</columns>
        <columns>WallTimeSeconds__c</columns>
        <columns>Session__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EventTime__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>